--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ website:
       - about.qmd
       - azure-governance.qmd
       - azure-compute.qmd
+      - azure-storage-non-relational.qmd
+      - azure-storage-relational.qmd
 
 format:
   html:
